--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="footer-divider"></div>
             <p class="footer-text">Available for consulting, advisory roles, and strategic operating partnerships.</p>
             <p class="contact-email">
-                <a href="mailto:daphne@example.com">Get in touch</a>
+                <a href="mailto:daphne@leschampsdusud.com">Get in touch</a>
             </p>
         </footer>
 
