--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h3 class="project-title">Les Champs du Sud</h3>
                     <div class="project-role">Independent Founder</div>
                     <p class="project-description">
-                        Curated travel and culinary experiences connecting New York audiences to France's Aveyron region. Full ownership: concept, brand, partnerships, guest experience. End-to-end responsibility for positioning, storytelling, pricing, and logistics.
+                        Curated travel and culinary experiences connecting New York audiences to France's Aveyron region.
                     </p>
                     <div class="project-gallery">
                         <img src="images/les-champs-1.jpg" alt="Les Champs du Sud" class="gallery-image">
