--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
                     <h3 class="project-title">Lightbox</h3>
                     <div class="project-role">CEO, 10 Years</div>
                     <p class="project-description">
-                        Led experiential venue through build, growth, and sustained operation. Full executive accountability across strategy, operations, partnerships, and business viability. Normalized broad responsibility, long-term thinking, and ownership across all dimensions of the business.
+                        Lightbox is an experience incubator launching next-generation consumer experiences in purpose-built spaces. I joined as the first hire and later served as CEO, leading the company from its initial build-out through growth, scale, and long-term sustainability.
+I oversaw all aspects of the business, including business development, operations, finance, and team leadership. During my tenure, I drove consistent year-over-year revenue growth (~30%), secured close to 100 events annually with clients ranging from emerging brands to Fortune 500 companies, and expanded Lightbox’s scope across B2B events, community programming, and consumer-facing experiences.
+I grew the team from zero to fifteen, built operational and financial systems, and worked closely with the board on strategic planning and decision-making. During COVID, I safeguarded the business by securing government funding, retaining employees, and pivoting toward new consumer experience formats in response to a collapsed events market.
+Lightbox continues to operate today, and I remain involved as an advisor, supporting the team on strategy and key initiatives as needed.
+
                     </p>
                     <div class="project-gallery">
                         <img src="images/lightbox-1.jpg" alt="Lightbox experiential dining" class="gallery-image">
