--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@ Lightbox continues to operate today, and I remain involved as an advisor, suppor
                     <h3 class="project-title">Les Champs du Sud</h3>
                     <div class="project-role">Independent Founder</div>
                     <p class="project-description">
-                        Curated travel and culinary experiences connecting New York audiences to France's Aveyron region.
+                        Les Champs du Sud was born from a desire to create a bridge between New York and the French countryside where I grew up, and between modern creativity and deep-rooted rural culture. It’s a project rooted in Aveyron’s authenticity, its emerging generation of chefs, farmers, winemakers, artisans, and makers who are reclaiming tradition while shaping the region’s future.
+Rather than a conventional tour, I design experiences that feel like invitations into a place: slow mornings exploring landscape and craft, long meals with producers in fields and farms, conversations with winemakers in hidden cellars, and unplanned moments that become the most memorable. Each edition is a curated week that surfaces Aveyron’s rhythms and reveals aspects of a region too often overlooked - from its picturesque fields to its still-secret spots and evolving cultural scene.
+Les Champs du Sud treats travel as immersion: a space for connection, curiosity, and belonging. It is about feeling at home in a landscape that is at once ancient and vibrantly alive.
                     </p>
                     <div class="project-gallery">
                         <img src="images/les-champs-1.jpg" alt="Les Champs du Sud" class="gallery-image">
