--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Lightbox continues to operate today, and I remain involved as an advisor, suppor
                 <!-- MADAM BRETT SOCIAL CLUB -->
                 <article class="project">
                     <h3 class="project-title">Madam Brett Social Club</h3>
-                    <div class="project-role">Interim General Manager</div>
+                    <div class="project-role">Operations Consultant & Interim General Manager</div>
                     <p class="project-description">
                         Built team, set culture, managed membership pipeline, shaped programming. Translated brand vision into lived member experience during pre-launch and early operations. Functioned as operational and cultural anchor of the club.
                     </p>
@@ -83,7 +83,7 @@ Lightbox continues to operate today, and I remain involved as an advisor, suppor
                 <!-- ALCHEMY -->
                 <article class="project">
                     <h3 class="project-title">Alchemy</h3>
-                    <div class="project-role">Operations Lead</div>
+                    <div class="project-role">Operations Consultant & Interim General Manager</div>
                     <p class="project-description">
                         Practitioner recruitment and onboarding, class scheduling and performance analysis, pricing and packaging logic, customer experience standards, operational documentation, internal systems coordination.
                     </p>
