--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- LIGHTBOX -->
                 <article class="project">
                     <h3 class="project-title">Lightbox</h3>
-                    <div class="project-role">CEO, 10 Years</div>
+                    <div class="project-role">CEO </div>
                     <p class="project-description">
                         Lightbox is an experience incubator launching next-generation consumer experiences in purpose-built spaces. I joined as the first hire and later served as CEO, leading the company from its initial build-out through growth, scale, and long-term sustainability.
 I oversaw all aspects of the business, including business development, operations, finance, and team leadership. During my tenure, I drove consistent year-over-year revenue growth (~30%), secured close to 100 events annually with clients ranging from emerging brands to Fortune 500 companies, and expanded Lightbox’s scope across B2B events, community programming, and consumer-facing experiences.
