--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@ Lightbox continues to operate today, and I remain involved as an advisor, suppor
                     <h3 class="project-title">Madam Brett Social Club</h3>
                     <div class="project-role">Operations Consultant & Interim General Manager</div>
                     <p class="project-description">
-                        Built team, set culture, managed membership pipeline, shaped programming. Translated brand vision into lived member experience during pre-launch and early operations. Functioned as operational and cultural anchor of the club.
-                    </p>
+                        Madam Brett Social Club is a private members’ social club in Beacon, NY, designed as a cultural and community-driven space for creatives, builders, and entrepreneurs. There, I led the club from pre-launch through early operations.
+The role focused on establishing the club’s operational and cultural foundations, including recruiting and training the front-of-house team, defining service standards, and setting the day-to-day rhythm of the space. Member acquisition and onboarding were led end to end, building the referral pipeline and shaping the tone, expectations, and social dynamics of the founding community.
+Throughout launch and early operations, I served as the primary point of contact between ownership, members, staff, and external collaborators, ensuring alignment across vision, execution, and growth.
                     <div class="project-gallery">
                         <img src="images/mbsc-1.jpg" alt="Madam Brett Social Club" class="gallery-image">
                         <img src="images/mbsc-2.jpg" alt="Madam Brett Social Club" class="gallery-image">
