--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@ Throughout launch and early operations, I served as the primary point of contact
                     <h3 class="project-title">Alchemy</h3>
                     <div class="project-role">Operations Consultant & Interim General Manager</div>
                     <p class="project-description">
-                        Practitioner recruitment and onboarding, class scheduling and performance analysis, pricing and packaging logic, customer experience standards, operational documentation, internal systems coordination.
+                        Alchemy is a yoga and wellness studio offering classes, treatments, and communal spa experiences in Beacon, NY. I led the launch and ongoing operations, overseeing the build-out of systems required to run the business day to day.
+The role included hiring and managing the full front-of-house team as well as recruiting, onboarding, and contracting teachers and wellness practitioners across disciplines. All scheduling, booking, and customer service workflows were designed and implemented end to end through dedicated software platforms, ensuring a seamless experience for both clients and staff.
+I helped build Alchemy’s operational infrastructure, including staffing models, class and treatment scheduling, payroll coordination, policies, and on-site service standards. In parallel with the team, also shaping the in-space experience, working across layout, flow, lighting, amenities, and guest journey to ensure the studio felt intentional, warm, and well run at every touchpoint.
+Alchemy operates as both a wellness destination and a community space, balancing operational rigor with a high-touch, human experience.
+
                     </p>
                     <div class="project-gallery">
                         <img src="images/alchemy-1.jpg" alt="Alchemy wellness studio" class="gallery-image">
