--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Throughout launch and early operations, I served as the primary point of contact
                         <img src="images/mbsc-6.jpg" alt="Madam Brett Social Club" class="gallery-image">
                         <img src="images/mbsc-7.jpg" alt="Madam Brett Social Club" class="gallery-image">
                     </div>
-                    <p class="photo-credit">Photos: [Photographer Name]</p>
+                    <p class="photo-credit">Photos: Maruf Rakib, Caleigh Tagarelli, Painting by Katie O'Hagan </p>
                 </article>
 
                 <!-- ALCHEMY -->
@@ -99,7 +99,7 @@ Alchemy operates as both a wellness destination and a community space, balancing
                         <img src="images/alchemy-3.jpg" alt="Alchemy wellness studio" class="gallery-image">
                         <img src="images/alchemy-4.jpg" alt="Alchemy wellness studio" class="gallery-image">
                     </div>
-                    <p class="photo-credit">Photos: [Photographer Name]</p>
+                    <p class="photo-credit">Photos: Meghan Spiro </p>
                 </article>
 
                 <!-- LES CHAMPS DU SUD -->
@@ -120,7 +120,7 @@ Les Champs du Sud treats travel as immersion: a space for connection, curiosity,
                         <img src="images/les-champs-6.jpg" alt="Les Champs du Sud" class="gallery-image">
                         <img src="images/les-champs-7.jpg" alt="Les Champs du Sud" class="gallery-image">
                     </div>
-                    <p class="photo-credit">Photos: [Photographer Name]</p>
+                    <p class="photo-credit">Photos: Victor Verse, Annabel Gueret, Paintings by Sara Boccaccino Meadows </p>
                 </article>
 
                 <!-- SUMMIT SERIES -->
@@ -138,9 +138,9 @@ In parallel, I supported and led brand partnership efforts, establishing and nur
                         <img src="images/summit-3.jpg" alt="Summit Series experience" class="gallery-image">
                         <img src="images/summit-4.jpg" alt="Summit Series speaker" class="gallery-image">
                         <img src="images/summit-5.jpg" alt="Summit Series venue" class="gallery-image">
-                        <img src="images/summit-6.jpg" alt="Summit Series community" class="gallery-image">
+                       
                     </div>
-                    <p class="photo-credit">Photos: [Photographer Name]</p>
+                    <p class="photo-credit">Photos: Nina Gorbenko </p>
                 </article>
 
                 <!-- DECODE EXPERIENCE -->
@@ -153,12 +153,13 @@ Initially launched as a community-driven talk series at Lightbox, Decode combine
 The project later scaled into large-format public art with META—morphosis, a month-long digital exhibition at One Times Square, showcasing animated works by 21 digital artists on the building's newly launched screens—temporarily transforming one of the world's most commercialized visual environments into an artist-led, ad-free experience.
                     </p>
                     <div class="project-gallery">
+                        <img src="images/decode-4.jpg" alt="Decode Experiential digital art" class="gallery-image">
                         <img src="images/decode-1.jpg" alt="Decode Experiential Times Square" class="gallery-image">
                         <img src="images/decode-2.jpg" alt="Decode Experiential panel" class="gallery-image">
                         <img src="images/decode-3.jpg" alt="Decode Experiential event" class="gallery-image">
-                        <img src="images/decode-4.jpg" alt="Decode Experiential digital art" class="gallery-image">
+                        
                     </div>
-                    <p class="photo-credit">Photos: [Photographer Name]</p>
+                    <p class="photo-credit">Photos: Nina Gorbenko, Zdravko Cota </p>
                 </article>
 
             </div>
