--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Lightbox continues to operate today, and I remain involved as an advisor, suppor
 
                 <!-- MADAM BRETT SOCIAL CLUB -->
                 <article class="project">
-                    <h3 class="project-title"><a href="#" target="_blank">Madam Brett Social Club</a></h3>
+                    <h3 class="project-title"><a href="https://www.madambrett.club" target="_blank">Madam Brett Social Club</a></h3>
                     <div class="project-role">Operations Consultant & Interim General Manager</div>
                     <p class="project-description">
                         Madam Brett Social Club is a private members' social club in Beacon, NY, designed as a cultural and community-driven space for creatives, builders, and entrepreneurs. There, I led the club from pre-launch through early operations.
@@ -85,7 +85,7 @@ Throughout launch and early operations, I served as the primary point of contact
 
                 <!-- ALCHEMY -->
                 <article class="project">
-                    <h3 class="project-title"><a href="#" target="_blank">Alchemy</a></h3>
+                    <h3 class="project-title"><a href="https://www.alchemy.life" target="_blank">Alchemy</a></h3>
                     <div class="project-role">Operations Consultant & Interim General Manager</div>
                     <p class="project-description">
                         Alchemy is a yoga and wellness studio offering classes, treatments, and communal spa experiences in Beacon, NY. I led the launch and ongoing operations, overseeing the build-out of systems required to run the business day to day.
@@ -104,7 +104,7 @@ Alchemy operates as both a wellness destination and a community space, balancing
 
                 <!-- LES CHAMPS DU SUD -->
                 <article class="project">
-                    <h3 class="project-title"><a href="#" target="_blank">Les Champs du Sud</a></h3>
+                    <h3 class="project-title"><a href="https://www.leschampsdusud.com" target="_blank">Les Champs du Sud</a></h3>
                     <div class="project-role">Independent Founder</div>
                     <p class="project-description">
                         Les Champs du Sud was born from a desire to create a bridge between New York and the French countryside where I grew up, and between modern creativity and deep-rooted rural culture. It's a project rooted in Aveyron's authenticity, its emerging generation of chefs, farmers, winemakers, artisans, and makers who are reclaiming tradition while shaping the region's future.
