--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@ Lightbox continues to operate today, and I remain involved as an advisor, suppor
                     </p>
                     <div class="project-gallery">
                         <img src="images/lightbox-1.jpg" alt="Lightbox experiential dining" class="gallery-image">
+                        <img src="images/lightbox-4.jpg" alt="Lightbox custom installation" class="gallery-image">
+                        <img src="images/lightbox-7.jpg" alt="Lightbox storefront" class="gallery-image">
+                        <img src="images/lightbox-5.jpg" alt="Lightbox event experience" class="gallery-image">
                         <img src="images/lightbox-2.jpg" alt="Lightbox immersive event" class="gallery-image">
                         <img src="images/lightbox-3.jpg" alt="Lightbox branded space" class="gallery-image">
-                        <img src="images/lightbox-4.jpg" alt="Lightbox custom installation" class="gallery-image">
-                        <img src="images/lightbox-5.jpg" alt="Lightbox event experience" class="gallery-image">
                         <img src="images/lightbox-6.jpg" alt="Lightbox bar service" class="gallery-image">
-                        <img src="images/lightbox-7.jpg" alt="Lightbox storefront" class="gallery-image">
+                      
                     </div>
-                    <p class="photo-credit">Photos: [Photographer Name]</p>
+                    <p class="photo-credit">Photos: Zdravko Cota </p>
                 </article>
 
                 <!-- MADAM BRETT SOCIAL CLUB -->
@@ -94,10 +95,10 @@ I helped build Alchemy's operational infrastructure, including staffing models, 
 Alchemy operates as both a wellness destination and a community space, balancing operational rigor with a high-touch, human experience.
                     </p>
                     <div class="project-gallery">
+                        <img src="images/alchemy-4.jpg" alt="Alchemy wellness studio" class="gallery-image">
                         <img src="images/alchemy-1.jpg" alt="Alchemy wellness studio" class="gallery-image">
                         <img src="images/alchemy-2.jpg" alt="Alchemy wellness studio" class="gallery-image">
                         <img src="images/alchemy-3.jpg" alt="Alchemy wellness studio" class="gallery-image">
-                        <img src="images/alchemy-4.jpg" alt="Alchemy wellness studio" class="gallery-image">
                     </div>
                     <p class="photo-credit">Photos: Meghan Spiro </p>
                 </article>
@@ -154,8 +155,8 @@ The project later scaled into large-format public art with META—morphosis, a m
                     </p>
                     <div class="project-gallery">
                         <img src="images/decode-4.jpg" alt="Decode Experiential digital art" class="gallery-image">
-                        <img src="images/decode-1.jpg" alt="Decode Experiential Times Square" class="gallery-image">
                         <img src="images/decode-2.jpg" alt="Decode Experiential panel" class="gallery-image">
+                        <img src="images/decode-1.jpg" alt="Decode Experiential Times Square" class="gallery-image">
                         <img src="images/decode-3.jpg" alt="Decode Experiential event" class="gallery-image">
                         
                     </div>
